--- a/material/layout/_master.tmpl
+++ b/material/layout/_master.tmpl
@@ -42,8 +42,7 @@
             </article>
             <hr/>
             <div class="doc-bottom">
-              {{#_author}}<span>Author: {{_author}}</span>{{/_author}}
-              {{#_modified}}&nbsp;|&nbsp;<span>Page Modified: {{_modified}}</span>{{/_modified}}
+              {{#_modified}}<span>Page Modified: {{_modified}}</span>{{/_modified}}
             </div>
           </div>
           {{^_disableAffix}}
