--- a/material/styles/main.css
+++ b/material/styles/main.css
@@ -311,6 +311,6 @@ pre {
   box-shadow: var(--card-box-shadow);
   max-width: 700px;
 }
-.doc-bottom{
-  font-size: 14px;
+.navbar-form{
+  box-shadow: inset 0 0px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1) !important;
 }
